# weightBlottoGame

./: CMakeLists.txt  LICENSE  README.md  blotto.cpp  blotto.h  database.cpp  database.h  main.cpp  original.txt
compiled/: blottoGame
